# heat-equation-GPU

./: CMakeLists.txt  README.md  main.cu
